--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "nanoid": "^3.3.1",
+    "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
 }
